--- a/obuna.html
+++ b/obuna.html
@@ -5,6 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Obuna-bo'ling</title>
 		<link rel="stylesheet" href="css/styles.css" />
+		<style>
+			body {
+				background-color: #000;
+				background-image: none;
+			}
+		</style>
 	</head>
 	<body>
 		<header class="site-header">
